# web-blog

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yaml
client/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
client/public/: site.webmanifest
client/src/: App.css  App.js  App.tsx  index.css  index.js  index.tsx  main.tsx
client/src/components/: EditorSidebar.tsx  TableOfContents.tsx  UnauthorizedAccess.tsx  card.js  card.tsx  index.js  index.ts
client/src/context/: AuthContext.tsx
client/src/hooks/: useDebounce.ts
client/src/layouts/: boardLayout.js  boardLayout.tsx  editorLayout.tsx  footer.js  footer.tsx  header.js  header.tsx  index.js  index.ts  listLayout.tsx  pageLayout.tsx
client/src/routes/: admin.tsx  boardList.js  boardList.tsx  editor.tsx  home.js  home.tsx  index.js  index.ts  login.tsx  pageRoute.tsx  unauthorized.tsx
client/src/utils/: api.ts  navigationGuard.ts  tocParser.ts
server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  api_example_image_upload.py  auth.py  entrypoint.sh  main.py  pyproject.toml  rate_limit.py
server/blog/: env.py
server/blog/versions/: 53e4aaf678ac_v2.py  5dc84a2011ec_init_db.py  d366a766417d_v1.py
server/db/: redis.py  session.py
server/models/: __init__.py  image.py  post.py
server/routers/: auth.py  image.py  og.py  post.py
server/schemas/: __init__.py  auth.py  post.py
server/services/: image_cleanup.py
server/templates/: og.html
