[project]
name = "web-blog-server"
version = "0.1.0"
description = "Web Blog Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.4",
    "python-multipart>=0.0.22",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "pillow>=10.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
