[project]
name = "web-blog-server"
version = "0.1.0"
description = "Web Blog Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.4",
    "python-multipart>=0.0.22",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "pillow>=10.4.0",
    "alembic>=1.18.3",
    "python-dotenv>=1.2.1",
    "asyncpg>=0.31.0",
    "aiosqlite>=0.20.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
